syntax="proto3";

package process;

option go_package = "./protos";

import "protos/group.proto";

message Process {
      uint32 id = 1;
      string created_at = 2;
      string updated_at = 3;
      uint32 pid = 4;
      string log = 5;
      string name = 6;
      string process_file = 7;
      string args = 8;
      string env_vars = 9;
      string status = 10;
      bool auto_restart = 11;
      uint32 uid = 12;
      string username = 13;
      uint32 gid = 14;
      uint32 restart_count = 15;
      string memory_usage = 16;
      string cpu_usage = 17;
      string dependencies = 18;
      repeated pgroup.Group groups = 19;
}

message ProcessList {
      repeated Process processes = 1;
}
